Closed Bug 252954 Opened 21 years ago Closed 21 years ago

In <menulist.xml>, "Error/Exception, NS_ERROR_FAILURE, nsIMenuBoxObject.activeChild, onxblkeypress"

Categories

(Core :: XUL, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla1.8alpha3

People

(Reporter: sgautherie, Assigned: neil)

References

Details

(Keywords: regression)

Attachments

(1 file, 2 obsolete files)

[Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040714] (release) (W98SE) {{ Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMenuBoxObject.activeChild]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://global/content/bindings/menulist.xml :: onxblkeypress :: line 41" data: no] }} This happens when leaving the To/Cc/etc dropdown listbox with the keyboard. Reproductible: 100% 1. Ctrl-M/... to compose a new message 2. Shift-Tab to go to the listbox 3. Tab to go (back) to the addresse field 3a. Works, but error in the JS.C. :-( This may be Browser component rather than MailNews !?
Invalid: This seems related to my modified setup only ... sorry.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → INVALID
Sorry again: the bug is there, I didn't checked the JS.C. properly in comment 1... [Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a1) Gecko/20040520] (release) (W98SE) But v1.8a1 does not have it: regression !
Status: RESOLVED → VERIFIED
Keywords: regression
Must I say it: sorry, I want to reopen this bug actually. (I should really be sleeping now !)
Status: VERIFIED → REOPENED
Resolution: INVALID → ---
Assignee: sspitzer → neil.parkwaycc.co.uk
Status: REOPENED → NEW
Component: Mail Window Front End → XP Toolkit/Widgets: Menus
Depends on: 64157
Product: MailNews → Browser
bz, my problem is that the popup frame hasn't been created yet ... I can create it by marking the menu as generated but I seem to remember you saying I can't do that synchronously, is that correct?
So.. At least one problem is that nsBoxObject::GetFrame is buggy. It should be doing a Flush_Frames flush on the presshell before calling GetPrimaryFrameFor. With that fixed, you should be able to set the attr and get to the thing through the box object synchronously...
Attached patch Proposed patch (obsolete) — Splinter Review
As it turns out, it seems to work anyway...
Attached patch -w (obsolete) — Splinter Review
For now it does. I believe that once bug 230170 lands it will break without the changes described in comment 5.
Attached patch Take twoSplinter Review
OK, so this time I'm bulletproofing the box object. And I call nsMenuFrame::MarkAsGenerated, so no worries there :-)
Attachment #154307 - Flags: superreview?(bzbarsky)
Attachment #154307 - Flags: review?(bzbarsky)
Comment on attachment 154307 [details] [diff] [review] Take two r+sr=bzbarsky, though GetFrame _still_ needs fixing, in my opinion (as in, if there is a reframe out on an event, we want to flush it out before calling GetFrame()).
Attachment #154307 - Flags: superreview?(bzbarsky)
Attachment #154307 - Flags: superreview+
Attachment #154307 - Flags: review?(bzbarsky)
Attachment #154307 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 21 years ago21 years ago
Resolution: --- → FIXED
Attachment #154299 - Attachment is obsolete: true
Attachment #154300 - Attachment is obsolete: true
OS: Windows 98 → All
Hardware: PC → All
Target Milestone: --- → mozilla1.8alpha3
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: