Bug 252954/64157 Ensure that the popup frame exists before accessing it r/sr=bz